--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <p><strong style="background-color: white; color:red;">Or sign up <a href="/">here</a></strong></p>
       </div>
     </div>
   </div>
