--- a/public/signup.html
+++ b/public/signup.html
@@ -36,7 +36,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p><strong style="background-color: white; color:red;">Or log in <a href="/login">here</a></strong></p>
       </div>
     </div>
   </div>
