--- a/public/members.html
+++ b/public/members.html
@@ -5,8 +5,12 @@
   <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">    
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  
+
 </head>
 
 <body>
@@ -27,9 +31,22 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
+  <button class="modalButton">MODAL</button>
+    <div class="ui modal foodModal">
+		  <i class="close icon"></i>
+      <div class="header">Nutritional Facts</div>
+        <div class="content">
+          Test Text!          
+        </div>
+        <div class = "actions">
+          <button class="ui green neutral button toCart">Add to Cart</button>
+          <button class="ui orange cancel button">Cancel</button>
+        </div>
+      </div>
+    </div>
 
+  
+ 
 </body>
 
 </html>
