made some changes

--- a/public/members.html
+++ b/public/members.html
@@ -36,7 +36,7 @@
 		  <i class="close icon"></i>
       <div class="header">Nutritional Facts</div>
         <div class="content">
-          Test Text!          
+             
         </div>
         <div class = "actions">
           <button class="ui green neutral button toCart">Add to Cart</button>
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-  
+    <button class="ui orange button" id='cartBttn'>Cart</button>
  
 </body>
 
