grocery shopping pages

--- a/public/members.html
+++ b/public/members.html
@@ -10,9 +10,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">    
   <link rel="stylesheet" src="stylesheets/style.css">
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-  
+  <link rel="handlebars" src= "index.handlebars">
 
 </head>
+
+
+  
+</div>
+<div class="content"></div>         
+  </div>
+</div>
+</div>
 
 <body>
   <nav class="navbar navbar-default">
@@ -32,6 +40,9 @@
     </div>
   </div>
 
+  <button class= "category">category</button>
+  
+
   <button class="modalButton">Food Product</button>
     <div class="ui modal foodModal">
 		  <i class="close icon"></i>
@@ -41,12 +52,8 @@
           <span class="mTitle">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Nutritional Information</span>
           <button class="ui orange cancel button" style="float: right;">Cancel</button>
           </div>
-      </div>
-      <div class="content"></div>         
-        </div>
-      </div>
-    </div>
 
+          
   
  
 </body>
